fix: Support increased letter-spacing for header (#19682)

--- a/projects/storefrontstyles/scss/components/layout/header/_header.scss
+++ b/projects/storefrontstyles/scss/components/layout/header/_header.scss
@@ -89,6 +89,10 @@ $space: 0.5rem;
     cx-link {
       display: block;
       padding-inline-end: 10px;
+
+      @include forFeature('headerLayoutForSmallerViewports') {
+        padding-inline-end: 0;
+      }
     }
   }
 
